FastesPathFromNode reprise ?